--- a/css/main.css
+++ b/css/main.css
@@ -5,48 +5,65 @@ body{
 	margin: 0;
 	padding: 0;
 }
-.container{
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
-	background-color: salmon;
-	
-	
-	
-}
-/*#pandaDesu{
-	background-color: salmon;
-	margin: 0;
-} */
+
+
 h1{
 	margin-top: 30px;
 	text-align: right;
 	font-family: 'Roboto', sans-serif;
 	font-size: 40px;
 }
+
 h4{
 	text-align: right;
 	font-family: 'Roboto', sans-serif;
 	font-size: 20px;
 }
-.col-12{
+
+.row{
 	width:100%;
 	
 	
 }
+img{
+	width: 100%;
+	margin-left: 0;
+	margin-right: 0;
+	margin-top:20px;
+	margin-bottom: 20px;
+}
 #aboutPandas{
-	background: green;
+	background: lightgreen;
+	width: 100%;	
 }
 .parrafo{
 	
 }
 h2{
 	text-align: center;
+	color: white;
 	
 }
 .col-6{
 	background-color: salmon;
-	margin-left:30%;
+	margin-left:25%;
 	margin-top: 50px;
 	margin-bottom: 50px;
+}
+
+#pictures{
+	background-color: lightgreen;
+}
+
+h3 {
+	font-family: 'Roboto', sans-serif;
+	margin-top: 30px;
+	text-align: center;
+	font-size: 40px;
+}
+.pict{
+	border: 8px solid white;
+	margin-left: 110%;
+	margin-bottom: 30px;
+
 }
